--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="str_princip">Bienvenido/a al super test de informática</string>
     <string name="str_pistaNombre">Introduce tu nombre</string>
     <string name="str_btInicio">Iniciar test</string>
+    <string name="str_btComprobar">Comprobar test</string>
 </resources>
