--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="str_btfinal">Comprobar Resultado</string>
     <string name="str_respuesta">Respuesta</string>
     <string name="str_pregunta">Pregunta</string>
+    <string name="str_fin">Salir</string>
 </resources>
